fix(step): make steps wrap by default as intended for single step

--- a/src/definitions/elements/step.less
+++ b/src/definitions/elements/step.less
@@ -29,6 +29,7 @@
 .ui.steps {
   display: inline-flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: stretch;
   margin: @stepMargin;
   background: @stepsBackground;
